manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "akstest-0712"
    labels:
        app: "akstest-0712"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "akstest-0712"
